fixing height issue on mobile, added hover styling to buttons

--- a/style.css
+++ b/style.css
@@ -6,13 +6,11 @@ body {
     box-sizing: border-box;
     margin: 0;
     background-color:  hsl(234, 29%, 20%);
-}
-main {
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
-
+    flex-direction: column;
 }
 #mainContainer { 
     border: 1px solid black;
@@ -136,6 +134,10 @@ button {
     cursor: pointer;
     font-weight: 300;
 }
+ button:hover {
+        background-image:linear-gradient(to right, #ff5574 , #ff6743);
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+ }
 footer {
     display: block;
     position: relative;
